--- a/src/os2datascanner/projects/report/reportapp/templates/statistics.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/statistics.html
@@ -30,5 +30,6 @@
   <script src="{% static "js/doughnutCharts.js" %}"></script>
   <script src="{% static "js/lineCharts.js" %}"></script>
   <script src="{% static 'js/userCharts.js' %}"></script>
+  <script src="{% static "js/modalLogic.js" %}"></script>
 
 {% endblock %}
