[#53733] MS Teams scan UI

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_askrun.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/scanner_askrun.html
@@ -45,6 +45,9 @@
           {% elif msgraphcalendarscanner.pk %}
             <a href="/msgraph-calendarscanners/{{ msgraphcalendarscanner.pk }}/run/"
                class="button button--cta button--large run-scan-button">{% trans "Let's go!" %}</a>
+          {% elif msgraphteamsfilescanner.pk %}
+            <a href="/msgraph-teams-filescanners/{{ msgraphteamsfilescanner.pk }}/run/"
+               class="button button--cta button--large run-scan-button">{% trans "Let's go!" %}</a>
           {% elif googledrivescanner.pk %}
             <a href="/googledrivescanners/{{ googledrivescanner.pk }}/run/"
                class="button button--cta button--large run-scan-button">{% trans "Let's go!" %}</a>
