--- a/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
@@ -74,7 +74,7 @@
       <td class="datatable__column--path">
         <div class="tooltip">
           <div class="overflow-ellipsis">
-            <span data-tooltip-text>{{ document_report.matches.handle.presentation_place }}</span>
+            <span data-tooltip-text>{{ document_report.place }}</span>
           </div>
         </div>
         <div class="hit-link">
