--- a/src/os2datascanner/projects/report/reportapp/templates/components/hits.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/hits.html
@@ -117,3 +117,10 @@
     </table>
   </form>
 </div>
+
+{% if settings.DEBUG %}
+  {% block footer %}
+    <a class="button button--debug"
+       onclick="return (Array.from(document.querySelectorAll('.__button')).map(el => el.classList.replace('__button', 'button')) && false)">Reveal debug buttons</a>
+  {% endblock %}
+{% endif %}
