--- a/src/os2datascanner/projects/report/reportapp/templates/partials/base.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/partials/base.html
@@ -69,6 +69,8 @@
         <!-- End modal dialog -->
       </div>
 
+      {% block footer %}{% endblock %}
+
       <script src="{% static '3rdparty/jquery-3.6.0.min.js' %} "></script>
 
       {% block scripts %}
@@ -93,7 +95,6 @@
 
       <!-- TODO: Do 'scripts' and 'jquery_script' need to be separate blocks? -->
       {% block jquery_script %}{% endblock %}
-
     </body>
   </html>
 {% endlanguage %}
