[#56848] Add a direct link to DocumentReport admin pages in debug mode
After you click on the candy cane-striped button at the bottom of the
page, the development environment now shows an extra button next to each
row in the report module that takes you to the Django administration page
for that DocumentReport

--- a/src/os2datascanner/projects/report/reportapp/templates/components/common/base.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/common/base.html
@@ -52,6 +52,8 @@
         <!-- End modal dialog -->
       </div>
 
+      {% block footer %}{% endblock %}
+
       <script src="{% static '3rdparty/jquery-3.6.0.min.js' %} "></script>
 
       {% block scripts %}
@@ -76,7 +78,6 @@
 
       <!-- TODO: Do 'scripts' and 'jquery_script' need to be separate blocks? -->
       {% block jquery_script %}{% endblock %}
-
     </body>
   </html>
 {% endlanguage %}
