--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -109,3 +109,23 @@
 span.text-highlight {
   background-color: var(--color-primary-light);
 }
+
+.dialog-dropdown {
+  position: absolute;
+  z-index: 100;
+  border: none;
+  border-radius: var(--border-radius-filter);
+  box-shadow: var(--box-shadow-filter);
+  padding: 1rem;
+  max-height: 50vh;
+  overflow-y: scroll;
+
+  ul {
+    margin: 0;
+    list-style: none;
+
+    li {
+      margin: 0;
+    }
+  }
+}
