--- a/src/os2datascanner/projects/static/scss/components/_filters.scss
+++ b/src/os2datascanner/projects/static/scss/components/_filters.scss
@@ -114,11 +114,15 @@ span.text-highlight {
   position: absolute;
   z-index: 100;
   border: none;
-  border-radius: var(--border-radius-filter);
   box-shadow: var(--box-shadow-filter);
   padding: 1rem;
   max-height: 50vh;
   overflow-y: scroll;
+  background-color: var(--color-widget-bg);
+
+  &.hidden {
+    display: none;
+  }
 
   ul {
     margin: 0;
@@ -126,6 +130,13 @@ span.text-highlight {
 
     li {
       margin: 0;
+      cursor: pointer;
+      border-radius: var(--border-radius-filter);
+      padding: 0.2rem;
+
+      &:hover {
+        background-color: var(--color-primary-light);
+      }
     }
   }
 }
