--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/miniscan.html
@@ -24,7 +24,6 @@
       </p>
       <form class="form"
             role="form"
-            hx-post="{% url 'miniscan_run' %}"
             hx-swap="innerHTML"
             hx-target="div#response"
             hx-encoding="multipart/form-data"
@@ -50,8 +49,14 @@
         {% include "components/admin-widgets/rule-builder.html" with hidden=True %}
         <button id="run-miniscan-btn"
                 class="button button--cta"
+                hx-post="{% url 'miniscan_run' %}"
                 type="submit"
                 style="margin-top: 1em">{% trans "Run" %}</button>
+        <button id="save-rule-miniscan-btn"
+                class="button"
+                hx-post="{% url 'miniscan_save' %}"
+                type="submit"
+                style="margin-top: 1em">{% trans "Save" %}</button>
 
         <h3>{% trans "Scan result" %}</h3>
         <div id="response">{% trans "(none yet)" %}</div>
