--- a/src/os2datascanner/projects/static/scss/components/_navigation.scss
+++ b/src/os2datascanner/projects/static/scss/components/_navigation.scss
@@ -9,10 +9,10 @@
   @media (min-width: $break-lg) {
     position: static;
     width: 15rem;
-    min-width: 15rem; // for IE11's sake, otherwise element will collapse completely if next to something that has flex-grow: 1
+    min-width: 15rem;
     min-height: 100%;
     display: block !important;
-    box-shadow: none !important; // for some reason, IE11 ignores box-shadow: none; here, and falls back to the base style (ln. 6) which has a box-shadow
+    box-shadow: none !important;
 
     .navi {
       margin-left: 1rem;
