--- a/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/hit.html
@@ -24,6 +24,8 @@
           <div class="overflow-ellipsis">
             {% if document_report.matches.scan_spec.rule.type_label == "email-header" %}
               <strong data-tooltip-text>subject in {{ document_report.matches.handle.presentation_name }}</strong>
+            {% elif document_report.matches.handle.source.handle.type_label == "msgraph-mail-message" %}
+              <strong data-tooltip-text>text in {{ document_report.matches.handle.presentation_name }}</strong>
             {% else %}
               <strong data-tooltip-text>{{ document_report.matches.handle.presentation_name }}</strong>
             {% endif %}
