[#56821] Add a clear button.

--- a/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/miniscan.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/os2datascanner/miniscan.html
@@ -52,6 +52,7 @@
                 hx-post="{% url 'miniscan_run' %}"
                 type="submit"
                 style="margin-top: 1em">{% trans "Run" %}</button>
+        <button id="clear-rule-miniscan-btn" class="button" style="margin-top: 1em">{% trans "Clear" %}</button>
         <button id="save-rule-miniscan-btn"
                 class="button"
                 hx-post="{% url 'miniscan_save' %}"
