--- a/src/os2datascanner/projects/static/scss/components/_statistics.scss
+++ b/src/os2datascanner/projects/static/scss/components/_statistics.scss
@@ -149,7 +149,25 @@
 .pie_legend_list {
 	list-style: none;
 	bottom: 0;
-	margin: 0 0 0 1rem;
+	margin: 0 0 0 2rem;
+}
+
+.data-label {
+	text-align: end;
+	flex-grow: 2;
+	line-break: none;
+	padding-left: 1rem;
+}
+
+.statistic ul {
+	width: 100%;
+}
+
+.statistic li {
+	display: flex;
+	width: 100%;
+	margin: 0;
+	align-items: center;
 }
 
 .statistic li>span {
@@ -157,6 +175,10 @@
 	font-family: Arial, Helvetica, sans-serif;
 	vertical-align: middle;
 	cursor: pointer;
+}
+
+.legend-txt, .data-label {
+	padding-top: 0.125rem;
 }
 
 .bullet {
